core-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: rezz-dev
  name: core-app
  labels:
    app: core-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-app
      version: v5

  template:
    metadata:
      labels:
        app: core-app
        version: v5

    spec:
      containers:
      - name: core-app
        image: deleany/core-app:v5
        imagePullPolicy: Always
        ports:
        - containerPort: 1111
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
          limits:
            cpu: 200m
            memory: 400Mi
        volumeMounts:
          - name: core-app-vol
            mountPath: "/config"
            readOnly: true
#
#          - name: filebeat-config
#            mountPath: /etc/filebeat
#            readOnly: true
#
#          - name: logs-dir
#            mountPath: /tmp/logs
#            readOnly: false

#      - name: filebeat-sidecar
#        image: deleany/file:latest
#        imagePullPolicy: Always
#        resources:
#          requests:
#            cpu: 100m
#            memory: 200Mi
#          limits:
#            cpu: 200m
#            memory: 400Mi
#        args: [ "filebeat -c /etc/filebeat/filebeat.yml" ]
#        command: [ "sh", "-c" ]
        volumes:
#          - name: filebeat-config
#            mountPath: /etc/filebeat
#            readOnly: true
#
#          - name: filebeat-cert-conf
#            mountPath: /etc/cert
#            readOnly: true
#
#          - name: logs-dir
#            mountPath: /tmp/logs
#            readOnly: false
#            volumes:
          - name: core-app-vol
            configMap:
              name: core-app-config
              items:
                - key: "config.ini"
                  path: "config.ini"
                - key: "game-special-key"
                  path: "game-special-key"

#          - name: filebeat-config
#            configMap:
#              name: filebeat-config
#              items:
#              - key: "filebeat.yml"
#                path: "filebeat.yml"
#
#          - name: filebeat-cert-conf
#            configMap:
#              name: filebeat-cert-conf
#              items:
#                - key: "root.pem"
#                  path: "root.pem"
#
#                - key: "filebeat.pem"
#                  path: "filebeat.pem"
#
#                - key: "filebeat.key"
#                  path: "filebeat.key"
#
#          - name: logs-dir
#            emptyDir: {}
