core-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: rezz-dev
  name: core-app-svc
  labels:
    app: core-app
spec:
  selector:
    app: core-app
  ports:
  - name: http-core-app
    port: 8080
    targetPort: 1111
