core-app/core-app-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: core-app-vs
  namespace: rezz-dev
spec:
  exportTo:
  - "*"
  hosts:
  - "app.rezz.io"
  gateways:
  - rezz-dev-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: core-app-svc.rezz-dev.svc.cluster.local
        subset: core-app-subset
      weight: 100
