core-app/dest-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: core-app-dst-rule
  namespace: rezz-dev
spec:
  exportTo:
    - "."
  host: core-app-svc
  subsets:
  - name: core-app-subset
    labels:
      app: core-app
    trafficPolicy:
      tls:
        mode: ISTIO_MUTUAL
